Fix horizontal scroll

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
-body {
+html, body {
 	margin: 0;
-	position: relative;
-	width: 100%;
+	max-width: 100%;
+    overflow-x: hidden;
 }
 
 hr {
